# docs/swagger.yaml
@@ -16,6 +16,8 @@ definitions:
     type: object
   database.Order:
     properties:
+      customer:
+        $ref: '#/definitions/database.Customer'
       customerID:
         type: integer
       id:
@@ -182,6 +184,28 @@ paths:
       summary: Создать новый заказ
       tags:
       - Заказы (Orders)
+  /orders/pending:
+    get:
+      description: Возвращает список всех заказов в статусе "Pending". Доступно только
+        для администраторов.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Список незавершенных заказов
+          schema:
+            items:
+              $ref: '#/definitions/database.Order'
+            type: array
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/router.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Получить список всех незавершенных заказов
+      tags:
+      - Администрирование (Admin)
   /products:
     get:
       description: Возвращает массив всех товаров, доступных в магазине
